# automation

./: .gitignore  README.md  bot_sender.py  check_binance_orders.py  requirements.txt  send_potd.py  send_qotd.py
.github/workflows/: check_binance_orders.yaml  qotd.yaml
binance_notifier/: Dockerfile  deploy-with-helm.sh  docker-build-and-push.sh  pyproject.toml  requirements.txt
binance_notifier/ops/: README.md  create-secrets.sh
binance_notifier/ops/binance-notifier/: Chart.yaml  values.yaml
binance_notifier/ops/binance-notifier/templates/: deployment.yaml
binance_notifier/src/: bot_sender.py  check_binance_orders.py  settings.py  types.py
binance_notifier/src/my_binance/: order_change_monitor.py  types.py
mqtt-notifier/: .gitignore  README.md  index.js  iot-toggle-tracker.js  package-lock.json  package.json  toggl-track-client.js  toggl-track.js
mqtt-notifier/config/: default.json
multitenant_actions/: README.md  bot_sender.py  main.py  requirements.txt
multitenant_actions/actions/: send_potd.py  send_qotd.py
multitenant_actions/model/: __init__.py  main.py
translation-logger/: .gitignore  README.md  setup.py
translation-logger/rutrans/: __init__.py  cli.py  rutrans.py
